@@ -1,3 +1,5 @@
+
+* fix take only tags from feature that are not present in scenario
 * fix do not overwrite config git when using filter from business overview
 
 0.1.0
